[gd_scene load_steps=4 format=3 uid="uid://b7o5nslhfk653"]

[ext_resource type="Script" path="res://Scripts/NPC/yes_no_choice_panel.gd" id="1_i5450"]
[ext_resource type="FontFile" uid="uid://cjc6s10hemgj7" path="res://Assets/Arts/Gui/Cyberphont/Dialogue Font/Fewture.ttf" id="2_ip08d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k2yey"]
bg_color = Color(0.113725, 0, 0.286275, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(1, 1, 1, 1)

[node name="YesNoDialogueChoice" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 321.0
offset_bottom = 121.0
script = ExtResource("1_i5450")

[node name="ChoiceboxContainer" type="MarginContainer" parent="."]
z_index = 5
layout_mode = 0
offset_right = 1152.0
offset_bottom = 162.0
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="Panel" type="Panel" parent="ChoiceboxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k2yey")

[node name="Label" type="Label" parent="ChoiceboxContainer/Panel"]
layout_mode = 2
offset_top = 10.0
offset_right = 1152.0
offset_bottom = 73.0
theme_override_fonts/font = ExtResource("2_ip08d")
theme_override_font_sizes/font_size = 20
text = "Proceed to the 
next level?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="ChoiceboxContainer/Panel"]
anchors_preset = 0
offset_left = 412.0
offset_top = 35.0
offset_right = 413.0
offset_bottom = 35.0

[node name="YesButton" type="Button" parent="ChoiceboxContainer/Panel/Control"]
layout_mode = 0
offset_left = 45.0
offset_top = 70.0
offset_right = 148.0
offset_bottom = 96.0

[node name="Label" type="Label" parent="ChoiceboxContainer/Panel/Control/YesButton"]
layout_mode = 0
offset_right = 100.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("2_ip08d")
text = "YES"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NoButton" type="Button" parent="ChoiceboxContainer/Panel/Control"]
layout_mode = 0
offset_left = 166.0
offset_top = 68.0
offset_right = 266.0
offset_bottom = 94.0

[node name="Label" type="Label" parent="ChoiceboxContainer/Panel/Control/NoButton"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 100.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("2_ip08d")
text = "NO"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ChoiceboxContainer/Panel/Control/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="ChoiceboxContainer/Panel/Control/NoButton" to="." method="_on_no_button_pressed"]
